# seekr

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  help.yml
.github/workflows/: ci.yml  deploy-docs.yml
benches/: index_bench.rs  ml_ranking_bench.rs  search_bench.rs
book/: book.toml
book/book/: 404.html  architecture.html  caching.html  commands.html  configuration.html  contributing.html  database.html  index.html  indexing.html  installation.html  license.html  performance.html  platform-support.html  print.html  quick-start.html  roadmap.html  searchindex.js  searchindex.json  searching.html  toc.html  toc.js
book/src/: SUMMARY.md  architecture.md  caching.md  commands.md  configuration.md  contributing.md  database.md  indexing.md  installation.md  introduction.md  license.md  performance.md  platform-support.md  quick-start.md  roadmap.md  searching.md
book/static/: manifest.json  robots.txt  sitemap.xml
book/theme/: head.hbs
examples/: caching.rs  configuration.rs  content_search_demo.rs  export_formats.rs  history_demo.rs  i18n_demo.rs  indexing.rs  ml_search_demo.rs  platform_ops.rs  plugin_demo.rs  quick_start.rs  ranking_demo.rs  saved_searches_demo.rs  search_modes.rs  semantic_search_demo.rs  watcher_demo.rs
src/: analytics.rs  cache.rs  cli.rs  collaboration.rs  config.rs  content_search.rs  core.rs  database.rs  distributed.rs  error.rs  history.rs  i18n.rs  indexer.rs  lib.rs  main.rs  ml.rs  mobile.rs  network.rs  platform.rs  plugin.rs  ranking.rs  saved_searches.rs  search.rs  semantic.rs  types.rs  watcher.rs  web.rs
