[package]
name = "seekr"
version = "0.1.0"
edition = "2024"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
description = "A fast, local-first, privacy-focused file search engine and command-line utility written in Rust."
license = "MIT"
repository = "https://github.com/muhammad-fiaz/seekr"
homepage = "https://muhammad-fiaz.github.io/seekr"
documentation = "https://muhammad-fiaz.github.io/seekr"
readme = "README.md"
keywords = ["search", "cli", "file-search", " indexing", "privacy"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "benches/",
    "book/",
    ".github/",
    ".gitignore",
]

[lib]
name = "seekr"
path = "src/lib.rs"

[[bin]]
name = "seekr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "suggestions", "wrap_help"] }
rusqlite = { version = "0.40", features = ["bundled"] }
walkdir = "2"
notify = "8"
rayon = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fuzzy-matcher = "0.3"
moka = { version = "0.12", features = ["sync"] }
directories = "6"
open = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
colored = "3"
tabled = "0.21"
indicatif = "0.18"
sha2 = "0.11"
hex = "0.4"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.7", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "index_bench"
harness = false

[[example]]
name = "quick_start"

[[example]]
name = "search_modes"

[[example]]
name = "indexing"

[[example]]
name = "caching"

[[example]]
name = "configuration"

[[example]]
name = "export_formats"

[[example]]
name = "platform_ops"

[[example]]
name = "watcher_demo"
